# ChangeLog for dev-perl/Test-NoWarnings
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-perl/Test-NoWarnings/ChangeLog,v 1.24 2010/01/14 14:45:06 grobian Exp $

  14 Jan 2010; Fabian Groffen <grobian@gentoo.org>
  Test-NoWarnings-0.084.ebuild:
  Transfer Prefix keywords

  03 Jun 2009; Torsten Veller <tove@gentoo.org>
  -Test-NoWarnings-0.082.ebuild:
  Cleanup

  16 May 2009; Alexis Ballier <aballier@gentoo.org>
  Test-NoWarnings-0.084.ebuild:
  keyword ~x86-fbsd

  06 May 2009; Jeroen Roovers <jer@gentoo.org> Test-NoWarnings-0.084.ebuild:
  Stable for HPPA (bug #268183).

  04 May 2009; Raúl Porcel <armin76@gentoo.org>
  Test-NoWarnings-0.084.ebuild:
  arm/s390/sh stable

  06 Apr 2009; Raúl Porcel <armin76@gentoo.org>
  Test-NoWarnings-0.084.ebuild:
  Add ~arm/~s390/~sh

  21 Mar 2009; Jeroen Roovers <jer@gentoo.org> Test-NoWarnings-0.084.ebuild:
  Marked ~hppa (bug #261707).

  15 Mar 2009; Brent Baude <ranger@gentoo.org> Test-NoWarnings-0.084.ebuild:
  Marking Test-NoWarnings-0.084 ~ppc64 for bug 261707

  17 Jul 2008; Raúl Porcel <armin76@gentoo.org>
  Test-NoWarnings-0.084.ebuild:
  alpha/ia64/sparc/x86 stable

*Test-NoWarnings-0.084 (29 Apr 2008)

  29 Apr 2008; Yuval Yaari <yuval@gentoo.org> +Test-NoWarnings-0.084.ebuild:
  Version bump

  13 Jul 2007; Raúl Porcel <armin76@gentoo.org>
  Test-NoWarnings-0.083.ebuild:
  alpha/ia64/x86 stable

  05 May 2007; Tobias Scherbaum <dertobi123@gentoo.org>
  Test-NoWarnings-0.083.ebuild:
  ppc stable

  14 Apr 2007; Michael Cummings <mcummings@gentoo.org>
  Test-NoWarnings-0.083.ebuild:
  Marking sparc stable

  05 Mar 2007; Andrej Kacian <ticho@gentoo.org>
  Test-NoWarnings-0.082.ebuild:
  Stable on x86, bug #169152.

  22 Jan 2007; Bryan Østergaard <kloeri@gentoo.org>
  Test-NoWarnings-0.082.ebuild:
  Stable on Alpha + IA64.

  19 Jan 2007; Michael Cummings <mcummings@gentoo.org>
  Test-NoWarnings-0.082.ebuild:
  Ebuild maintenance
