@@ -1,6 +1,18 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA1
+
 DIST Test-NoWarnings-0.083.tar.gz 15280 RMD160 1a8945784009eda425fc1ee99d0d16de9da15a4c SHA1 fbf4017d2f502ee877a7139cb1bedf57e22f4b00 SHA256 7da6bba4f9acde356142cdc5e035729ad82964de7c52804bafdbf3a445f87d4a
 DIST Test-NoWarnings-0.084.tar.gz 15335 RMD160 a659ab279e0398d70098630979a850b721ac6993 SHA1 6c11e3c8d7e724e70ba2e4cc180844a87f5ed5e3 SHA256 0b69d1dbe54a2b029993e1772e25c6f059d6f755f1732b47bf29e735d43de4a5
+DIST Test-NoWarnings-1.01.tar.gz 17618 RMD160 513ec005d249cbf4ecece4debcd9fc8737904ed3 SHA1 9f13caef00364436563d8387dd679466496b82dd SHA256 9ec81fd6f2c6c6c61af80313053e141caeec53e741153f7a2219f766e4bf4b27
 EBUILD Test-NoWarnings-0.083.ebuild 565 RMD160 6d8ce1971727a8403a81c9801d73af5d0ed7f0e5 SHA1 173d87cf8c599fa412fa7dc42a77afba49033acd SHA256 aa75f2d2a6127cde617dd6a659c4ca92862bd53bce63ee883be94a293ac84907
 EBUILD Test-NoWarnings-0.084.ebuild 647 RMD160 a3408a9ef1cc84c0bdeb2117d8093a9908f6476a SHA1 5086092c3b0c8b2772657dcecf37fe1673dd7019 SHA256 2736abd284c68aa474f5e07d900bb90614f2ba263b9a51046092359b1a79e78a
-MISC ChangeLog 2970 RMD160 e08505bcd2d4d38c0f2d538d9b6a0ddcc1e6763d SHA1 c7c87dc44c46f4b5f48b9269e5d5b1ba3ed35f88 SHA256 7f62f55108e2d9217929ef9cede64c34a29a6766cde52da29bd6d2f1ad68c976
+EBUILD Test-NoWarnings-1.01.ebuild 547 RMD160 83448bfac99658fa8a223a0b9b78c39ab8325931 SHA1 61adcb87de7e71531094eac29fd2f61155ed96c0 SHA256 0ca99106ddd84743b7285592df501853a60e136513945d6b44d55fabd3586596
+MISC ChangeLog 3100 RMD160 ef5c8cfdb1c3125a880c421ceda3f8f5117babd0 SHA1 6c6fdb5c1883df21b71a29b526573d7d56474b74 SHA256 88fc7fbe6851316eb70dbaa4198f09762c4875b2db1c3101531ac027c165109b
 MISC metadata.xml 305 RMD160 647980838c590f54441a053916ea629e53e551c0 SHA1 99ef1deeae9a934fb6e46cf5fc4a5fcb8379a74a SHA256 f05dbef15061919972882cab07057e102760a542beba17d131194091401cd7ca
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.14 (GNU/Linux)
+
+iEYEARECAAYFAktSKwMACgkQV3J2n04EauzbKgCcCB0X8QN2Uxj69aj4cIAB4+Ao
+49sAoKSxEc7+KTvbQxMGoe+uZWYQTCaI
+=eHAs
+-----END PGP SIGNATURE-----
