@@ -1,0 +1,20 @@
+# Copyright 1999-2010 Gentoo Foundation
+# Distributed under the terms of the GNU General Public License v2
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/Test-NoWarnings/Test-NoWarnings-1.01.ebuild,v 1.1 2010/01/16 21:09:17 tove Exp $
+
+EAPI=2
+
+MODULE_AUTHOR=ADAMK
+inherit perl-module
+
+DESCRIPTION="Make sure you didn't emit any warnings while testing"
+
+SLOT="0"
+LICENSE="LGPL-2.1"
+KEYWORDS="~alpha ~amd64 ~arm ~hppa ~ia64 ~ppc ~ppc64 ~s390 ~sh ~sparc ~x86 ~x86-fbsd"
+IUSE=""
+
+RDEPEND=">=dev-perl/Test-Tester-0.107"
+DEPEND="${RDEPEND}"
+
+SRC_TEST="do"
