@@ -1,6 +1,12 @@
 # ChangeLog for dev-perl/Test-NoWarnings
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/Test-NoWarnings/ChangeLog,v 1.24 2010/01/14 14:45:06 grobian Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/Test-NoWarnings/ChangeLog,v 1.25 2010/01/16 21:09:17 tove Exp $
+
+*Test-NoWarnings-1.01 (16 Jan 2010)
+
+  16 Jan 2010; Torsten Veller <tove@gentoo.org>
+  +Test-NoWarnings-1.01.ebuild:
+  Version bump
 
   14 Jan 2010; Fabian Groffen <grobian@gentoo.org>
   Test-NoWarnings-0.084.ebuild:
